objects/ASI_MFM_Sub_Channel__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Channel_Attributes__c</fullName>
        <label>Channel Attributes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>ASI_CRM_CN_Channel__c</referenceTo>
        <relationshipLabel>Sub-Channel</relationshipLabel>
        <relationshipName>Sub_Channel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Eng_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Not_in_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not in use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_Channel_Chi_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sub_Channel_Code__c</fullName>
        <label>Sub-Channel Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Channel_Name__c</fullName>
        <formula>ASI_CRM_CN_Channel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Group_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Outlet Type</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>ASI_CRM_Group_Outlet_Type__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW Group Outlet Type</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Group_Outlet_Type__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TH Group Outlet Type</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Group_Outlet_Type__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM MY Group Outlet Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipLabel>Sub-Channel</relationshipLabel>
        <relationshipName>Sub_Channel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Outlet_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Type</label>
        <referenceTo>ASI_CRM_Outlet_Type__c</referenceTo>
        <relationshipLabel>Sub-Channel</relationshipLabel>
        <relationshipName>Sub_Channel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Is_Sell_In__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Sell In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sub-Channel</label>
    <listViews>
        <fullName>ASI_CRM_TW_Sub_Channel</fullName>
        <columns>ASI_CRM_CN_Channel__c</columns>
        <columns>ASI_CRM_CN_Sub_Channel_Code__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Sub_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>ASI_CRM_Group_Outlet_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_Is_Sell_In__c</columns>
        <columns>ASI_CRM_CN_Not_in_use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_Channel__c.ASI_CRM_TW_SubChannel</value>
        </filters>
        <label>TW Sub-Channel</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Sub_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_CN_Eng_Name__c</columns>
        <columns>ASI_CRM_CN_Not_in_use__c</columns>
        <columns>ASI_MFM_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_Sub_Channel</fullName>
        <columns>ASI_CRM_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Sub_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_CN_Channel__c</columns>
        <columns>ASI_CRM_CN_Sub_Channel_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_Channel__c.ASI_MFM_CN_Sub_Channel</value>
        </filters>
        <label>CN Sub Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Sub_Channel1</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Sub_Channel_Chi_Name__c</columns>
        <columns>ASI_CRM_CN_Channel__c</columns>
        <columns>ASI_CRM_CN_Sub_Channel_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_CRM_CN_Sequence__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_Channel__c.ASI_MFM_CN_Sub_Channel</value>
        </filters>
        <label>CN Sub Channel</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Segmentation_Sub_Channel</fullName>
        <columns>ASI_CRM_CN_Channel__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Sub_Channel_Code__c</columns>
        <columns>ASI_CRM_CN_Eng_Name__c</columns>
        <columns>ASI_CRM_CN_Channel_Attributes__c</columns>
        <columns>ASI_CRM_MY_Outlet_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_Channel__c.ASI_CRM_MY_Segmentation_Sub_Channel</value>
        </filters>
        <label>MY Segmentation Sub-Channel</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MY_Sub_Channel</fullName>
        <columns>ASI_CRM_CN_Channel__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Sub_Channel_Code__c</columns>
        <columns>ASI_CRM_CN_Eng_Name__c</columns>
        <columns>ASI_CRM_CN_Channel_Attributes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Sub_Channel__c.ASI_CRM_MY_Sub_Channel</value>
        </filters>
        <label>MY Sub-Channel</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Sub-Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-Channel</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_Segmentation_Sub_Channel</fullName>
        <active>true</active>
        <label>MY Segmentation Sub-Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Sub_Channel</fullName>
        <active>true</active>
        <label>MY Sub-Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_SubChannel</fullName>
        <active>true</active>
        <label>TW Sub-Channel</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Sub_Channel</fullName>
        <active>true</active>
        <label>CN Sub-Channel</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>